Add alert test to diagnose download button issue

--- a/templates/tools.html
+++ b/templates/tools.html
@@ -4800,6 +4800,7 @@
         }
 
         function downloadSectionReport(sectionKey, format = 'excel') {
+            alert(`Download button clicked! Section: ${sectionKey}, Format: ${format}`);
             console.log('=== DOWNLOAD SECTION REPORT ===');
             console.log('Section Key:', sectionKey);
             console.log('Format:', format);
